# autoML-backend

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
db/: models.py  mongodb.py
routes/: cleanup.py  eda.py  models.py  plots.py  train.py
schemas/: request_schemas.py  response_schemas.py
services/: cleanup_service.py  eda_service.py  model_service.py  plot_service.py  train_service.py
utils/: file_utils.py  naming.py
