[project]
name = "automl-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "adagio==0.2.6",
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "ansi2html==1.9.2",
    "anyio==4.9.0",
    "aplr==10.9.0",
    "appdirs==1.4.4",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "catboost==1.2.8",
    "category-encoders==2.7.0",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "choreographer==1.0.9",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "colour==0.1.5",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "cython==3.1.2",
    "daal==2025.5.0",
    "dacite==1.9.2",
    "dash==2.18.2",
    "dash-auth==2.3.0",
    "dash-bootstrap-components==1.7.1",
    "dash-core-components==2.0.0",
    "dash-cytoscape==1.0.2",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "deprecation==2.1.0",
    "dill==0.4.0",
    "dnspython==2.7.0",
    "dtreeviz==2.2.2",
    "executing==2.2.0",
    "explainerdashboard==0.5.1",
    "fairlearn==0.7.0",
    "fastapi==0.115.13",
    "fastjsonschema==2.21.1",
    "flask==3.0.3",
    "flask-simplelogin==0.2.0",
    "flask-wtf==1.2.2",
    "fonttools==4.58.4",
    "fs==2.4.16",
    "fsspec==2025.5.1",
    "fugue==0.9.1",
    "gevent==25.5.1",
    "graphviz==0.21",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "htmlmin==0.1.12",
    "idna==3.10",
    "imagehash==4.3.1",
    "imbalanced-learn==0.13.0",
    "importlib-metadata==8.7.0",
    "iniconfig==2.1.0",
    "interpret==0.6.12",
    "interpret-core==0.6.12",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.3.2",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-dash==0.4.2",
    "jupyterlab-widgets==3.0.15",
    "kaleido==1.0.0",
    "kiwisolver==1.4.8",
    "kmodes==0.12.2",
    "lightgbm==4.6.0",
    "llvmlite==0.44.0",
    "logistro==1.1.0",
    "markupsafe==3.0.2",
    "matplotlib==3.7.5",
    "matplotlib-inline==0.1.7",
    "mlxtend==0.23.4",
    "multimethod==1.12",
    "multiprocess==0.70.18",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==1.26.4",
    "orjson==3.10.18",
    "oyaml==1.0",
    "packaging==25.0",
    "pandas==2.1.4",
    "parso==0.8.4",
    "patsy==1.0.1",
    "phik==0.12.4",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "plotly==5.24.1",
    "plotly-resampler==0.10.0",
    "pluggy==1.6.0",
    "pmdarima==2.0.4",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "puremagic==1.29",
    "pyarrow==20.0.0",
    "pycaret==3.3.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.0",
    "pygments==2.19.2",
    "pymongo==4.13.2",
    "pynndescent==0.5.13",
    "pyod==2.0.5",
    "pyparsing==3.2.3",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pywavelets==1.8.0",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "referencing==0.36.2",
    "requests==2.32.4",
    "retrying==1.3.4",
    "rpds-py==0.25.1",
    "salib==1.5.1",
    "schemdraw==0.15",
    "scikit-base==0.7.8",
    "scikit-learn==1.4.2",
    "scikit-learn-intelex==2025.5.0",
    "scikit-plot==0.3.7",
    "scipy==1.11.4",
    "seaborn==0.13.2",
    "shap==0.44.1",
    "simplejson==3.20.1",
    "six==1.17.0",
    "sklearn-compat==0.1.3",
    "sktime==0.26.0",
    "slicer==0.0.7",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "statsforecast==1.5.0",
    "statsmodels==0.14.4",
    "tbats==1.1.3",
    "tbb==2022.1.0",
    "tcmlib==1.3.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triad==0.9.8",
    "tsdownsample==0.1.4.1",
    "typeguard==4.4.4",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "umap-learn==0.5.7",
    "urllib3==2.5.0",
    "uv==0.7.13",
    "uvicorn==0.34.3",
    "visions==0.8.1",
    "waitress==3.0.2",
    "wcwidth==0.2.13",
    "werkzeug==3.0.6",
    "widgetsnbextension==4.0.14",
    "wordcloud==1.9.4",
    "wtforms==3.2.1",
    "xxhash==3.5.0",
    "ydata-profiling==4.14.0",
    "yellowbrick==1.5",
    "zipp==3.23.0",
    "zope-event==5.0",
    "zope-interface==7.2",
]
